@@ -1,16 +1,14 @@
 AUX tlp-stat-do-not-set-needs_root_priv-0-directly.patch 1864 SHA256 0534be8f8f11b5a014380ab3b3d2fc7f0f23d8113dc75e6ac6b768abb41f4adf SHA512 308c34a9938aba725fdb9a7d1e6584551d2619e0e45553338a7b19825a2e45677ccb363780091b5cb4733ce009c9fb3ae2d21aee78c12a822e66a49ca7ebfd8e WHIRLPOOL b87ca02f7230ccfa8d67ccf72e95eea56c91c29fa179dee49daf1f1492017c87e7cc7088b9be6264b6f39f1d59a048e8f1f517a987ab476a867879c991b5df4d
 AUX tlp-usblist-print-unknown-if-device-desc-is-empty.patch 946 SHA256 a057019074e44935723cb32e541004db37f8f918775a400c9aefc3bd0be6825c SHA512 6e9fc48127e0784c809ee88428101bd599449661f8eb629db4244e4a3406bbfe0683278322a7e7564c869743ebf01a87507f5e6e375eac76e3783721a483e8ee WHIRLPOOL f160968e6287a28f7a86d110de8da60deed3f0f06f7ce0ae15d2e42506e3adaf148b1346d1981a69eba36f095017633ab41446807413836dee86f88e4f2d94ec
 DIST tlp-0.3.6-r1-gentoo.tar.bz2 28314 SHA256 9996a42701d439474e89b9ef7b1d3714a8d876a1a287f14b23bf0d42efcff88e SHA512 51953d783bc60282673d226394602d61b229b96531f55bad1687ea57b61667a922c71c39be5b85412b09ee95b04170d4804b00ae1a0258c456dbfc4040cc3b52 WHIRLPOOL 34bad9e3553a0a54d9da9557faf8674fbde33282dad42af7db5a54c2dca9076bef1e6662817131718844aaa3e5b4714f6ed99fd743a10b769293853ab2b1449c
-DIST tlp-0.3.6.900-r0-gentoo.tar.bz2 32146 SHA256 0a94d520fcc708f14cb670018305828611f17c9ac33a6b65fd500f3c8ea56b34 SHA512 20a02f1619d3e95c3f7ca387ce2c7f26abd970d753b6059007932f600a57d74896144046b8de4fab55ef79ad5db1b379b8b40bbc5af88e83f79b874e665c519a WHIRLPOOL 07403e3866d3440aaf9778e99d1ebe7f2df197d757a10629f17a023bc3ad180b6c98a9d4d5a86529d2678778a9d3db09e9be2c6296f102b6096d100f9340ef59
 DIST tlp-0.3.7_p1-r0-gentoo.tar.bz2 31264 SHA256 4861f8470b12fe7d706032db6a204a10a69edaf357ffef41f8c29fcd92d86f0f SHA512 8ab6b8c7a1f91ea92fac6aa83b0be007bbad44a963ea18d9c0dcc9bbbcf9dd9d7c12420497b326be6cd4802c728ee8f4ae59bc1b7d09ba63fef38c49bb48ad8e WHIRLPOOL fe9f0645445f660822023b11e19c9cf80e08feebb81fae85c39089a53fcf5f7b152fc168ef23d7f4a9b4c8f7684835200490101d11edc6f19eba7fac3663d6fd
 DIST tlp-gentoo-additions-0.3.7.1.tar.bz2 9073 SHA256 0f139b54adaf5a340cf200d7ee8602e53f94558f94d430d043e907985c4d3a67 SHA512 0a56ea1b7270c8ea5fe1157ae64f42da67e79e02243bf33bffba825b5b53628bace31ab00b3b0448dde00a2db215d7c5012ae4774552f1c4ff0e7e197d45600b WHIRLPOOL dea2a3c80f55945d6b76d8ee8a8b9d9cd27877314fddc0145d0886516b9c274c124c365274845d40a7f091fe7304b2a69827d136aefa75ce53b89e4905814c51
 DIST tlp-gentoo-additions-0.3.7.901-r2.tar.bz2 9274 SHA256 1b9a95a2a9b6a0c01c480cbbf9bee027fda9832dcd35f27a3e396e714af7c75a SHA512 51aeaf444dd1a98d3afe3e766209b35f28d3af67b2c29d0bfefc6983b2456aef856f14ac484512ffae3aa47e018f4d2e9e761e03cd501a9237f21225bc42c51f WHIRLPOOL bf73625f4a86e5dce0138c349654c0bdf399795d38b9ac66a6ca2ff5a0c07be6894670621cb4a5c499369b8cd3f914aa26094ddd72e4016b98823f76db90103b
 DIST tlp-gentoo-additions-0.3.7.901.tar.bz2 9073 SHA256 0f139b54adaf5a340cf200d7ee8602e53f94558f94d430d043e907985c4d3a67 SHA512 0a56ea1b7270c8ea5fe1157ae64f42da67e79e02243bf33bffba825b5b53628bace31ab00b3b0448dde00a2db215d7c5012ae4774552f1c4ff0e7e197d45600b WHIRLPOOL dea2a3c80f55945d6b76d8ee8a8b9d9cd27877314fddc0145d0886516b9c274c124c365274845d40a7f091fe7304b2a69827d136aefa75ce53b89e4905814c51
 EBUILD tlp-0.3.6-r1.ebuild 3995 SHA256 ec43b6d639161e1e58fd92e8cff491f7f6735b798e97605bbe6942803d12f7d0 SHA512 293d3143cbc6bc4a5c113d4fe200e3c86bdb1ff7121becb87567d8d2776ac17b9e47c9e49b0cfc7d041d7fe27451808d168015ebbbc8781c31ab13856eef601e WHIRLPOOL bab7bc2755e2352adb57ab848cff1fbe1acad8bdf4e8daa8537bacff9381bcbc54d54f724f371025a7f05251a73ba1ff6ee88c300dea2626c39e3ceb4f115dd6
-EBUILD tlp-0.3.6.900.ebuild 3942 SHA256 898b40f809a5db48d48694f17eec0e998603bb7298976b3e4a0dad232a8a7cec SHA512 ffdd8ba1d7847c86cb3d60e990210ff85e38d701bce383d794ccd0512247d8d29f65b1313c8a1f4243d125035acc888df18cbab75eb268d421eaa53e65aba88f WHIRLPOOL 2b4c688c27fe272b026b944fbc7d587e560b0f547dc8df619e1bf5c885a0df296f5958cfa9aceb4351c7b1b70d70588941dfba53c7bae06d8617f30be19f6521
 EBUILD tlp-0.3.7.1.ebuild 5483 SHA256 06cf488c4133a367bd9cea53d691400b4942b843588fc0954d11b4307a13dc1a SHA512 d1130660eaf4498ca0831f396bc67f3ddc4a4e37a706155d6e188f86b31c0bdbf0bc7aa4c59d630597dc7ca1dfe40c0e50ec35fcfd7fd07e9ad423818446ae8e WHIRLPOOL 884c86c57d6c5e22d8c27484134412292950c072ee7a83eab265a077700e772c46056b18be8d21cab43ae6f7d9214f117a80d47cd013c11ae7b612d82afab1b0
 EBUILD tlp-0.3.7.901_pre20130103.ebuild 6039 SHA256 b53f7477a885611df8172f680c2038ff4c72aac3ed552bfdd63dc967d7cc5cf6 SHA512 1fde2d8495b10c2ef900fa810f6dcec29cd688ce18ccaa0c0ad5a841d995f59505fb25291cd1c561855ed5097d9ccfee380c451a5009ed2d1e600c7857da16c2 WHIRLPOOL 762701a7d6906d4407c2ee1eceaaec47d832b5e8f8b65d125f2651d049c8343f3c527e6f678421751b1d5e4cabc103f6b8e64397d3fabd8bd90dc21867e3f2ad
 EBUILD tlp-0.3.7.901_pre20130120.ebuild 8051 SHA256 e33850498458ae1eec56d3e2112326ce6ff953c389fd8a866166d6c2ddf6ceec SHA512 750f7ad47d7d5687bd4761272144928e321ff6f5c996b665e1f058a1193ae4f3b5e42afd2f1317daa9b6c05436fd43989cd11a07bbed8d7ba1b5128e78c36911 WHIRLPOOL 8e9b4a1327fd497b189e19e3df75eb39eee4c90b08f0fa78a0b136c12a2cfe2e944a26c805ae9f754b60b1de2738b5e9bf6d43af23612d5640e2fdd695bcad69
 EBUILD tlp-0.3.7_p1.ebuild 4261 SHA256 6169c496f2d94d28b14566a047621a2449145d071b21a20b41439a1aed584c01 SHA512 61ea2b90755c29d3eaf3d9265ecba4f3487c2154fee14ece34c18ce4f0b07833fa9df72f2c36dbcb611135c784c9964f1a889df9fac80de235b8f00e520a4d07 WHIRLPOOL bb523fc02b3fe36a54ff863044377f9032d90476443a12a90b097918f296456f785c68a5379f0a05737920d13d46f7fabe3bb22306853cc0532496fe1e816fe1
-MISC ChangeLog 4451 SHA256 5b6ce0555b0fac1ec74ecf664efd69506c1afafd9f5ed087719104bc23aac43e SHA512 cc80996d348bcb939f129a6fde2fe2c83c8aaa6e7be8e06bf8b70c66cbe7284852da3ee0a5c861349b6d58cafc9d30485fc0b129eae86cae43371b7d1a9797f0 WHIRLPOOL 27c6b4dc06023f33dd506b8034906becdea3b4334fc87866eff7557cf8c469dbaf8e52f486710aafb8c9542bd5cd1ef3731f3e680651111f35ed3934b07ffb83
+MISC ChangeLog 4606 SHA256 53023ac40316941130f8e9c88d437708a8b6d05543ea13c92b4bec93ad711f0e SHA512 05208d7672cd0d07d90e2342061e2ca8ddd81e2aedb88fd61e2956fb359bb2fae1f8713a867a9543eaeb377e3f553c62ac0bb616a3a88edb882b1f76a9dc02f9 WHIRLPOOL 823f1c27837be68adb345e3bfa13e93d08fb9233194afc6767f3c4cc312d189f57b40f62c2d49b9a70db1e5039a019a6adfc2e7ae606d0dc35019bfa6cc75182
 MISC metadata.xml 2739 SHA256 7d8904c65e6ef78cabdf40eeac202124ba4c957dedc77290e092566151ef065e SHA512 63a2711290faf416b1b0e0c9ab9f0dad2bb5cc48807e790ba4a6b3b12372d88e19e30d3ff19c9199bbe3edbd0f258ff93bc427e4bd586ab8c69f45cb5c242f02 WHIRLPOOL 46c28b9e19dd9f330901c67609358830223dc6cac3dbca42a1429da4c8b0f6aef0a5a480fc99c7d2bb6a97f3cdf476cf16a7c2eed6ac114af09271534ea7a40d
