@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*old ebuilds removed (25 Jan 2013)
+	25 Jan 2013; Andre Erdamnn <dywi@mailerd.de> tlp-0.3.6.900.ebuild :
+
+	old ebuild removed as announced in package.mask
+
 *tlp-0.3.7.901_pre20130120 (20 Jan 2013)
 	20 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.901_pre20130120.ebuild :
 
